--- a/LambdaInventarioUTAPI/appsettings.json
+++ b/LambdaInventarioUTAPI/appsettings.json
@@ -7,8 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "inventarioUTDBLocalConnection": "Server=LAPTOP-CEHN0PRN\\SQLEXPRESS;Database=inventarioUTDB;Trusted_Connection=True;MultipleActiveResultSets=true;",
-    "AmazonRDSinventarioutdbConnection": "Server=inventarioutdb.cdhwuowlxrdd.us-east-2.rds.amazonaws.com,1433; Database=inventarioutdb; User=adminaws; Password=Adminaws1*",
-    "SomeeInventarioUTDBConnection": "Server=\tinventarioUTDB.mssql.somee.com;User=ALANLB_SQLLogin_1;Password=gd4wgib991"
+    //"inventarioUTDBLocalConnection": "Server=LAPTOP-CEHN0PRN\\SQLEXPRESS;Database=inventarioUTDB;Trusted_Connection=True;MultipleActiveResultSets=true;",
+    "AmazonRDSinventarioutdbConnection": "Server=inventarioutdb.cdhwuowlxrdd.us-east-2.rds.amazonaws.com; Database=inventarioutdb; User=admin; Password=Adminaws1*"
   }
 }
