--- a/LambdaInventarioUTAPI/appsettings.json
+++ b/LambdaInventarioUTAPI/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"inventarioUTDBLocalConnection": "Server=LAPTOP-CEHN0PRN\\SQLEXPRESS;Database=inventarioUTDB;Trusted_Connection=True;MultipleActiveResultSets=true;",
-    "AmazonRDSinventarioutdbConnection": "Server=inventarioutdb.cdhwuowlxrdd.us-east-2.rds.amazonaws.com; Database=inventarioutdb; User=admin; Password=Adminaws1*"
+    "AmazonRDSinventarioutdbConnection": "Server=inventarioutdb.cdhwuowlxrdd.us-east-2.rds.amazonaws.com,3306; Database=inventarioutdb; User=admin; Password=Adminaws1*"
   }
 }
